--- a/frontend/src/app/features/dashboard/pages/download-activities-page/download-activities-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/download-activities-page/download-activities-page.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto md:px:0 px-10 max-w-7xl">
     <div class="card-secondary">
-        <p-table [value]="activities" [loading]="isLoading()" [(selection)]="selectedActivities" dataKey="code">
+        <p-table [value]="activities" [loading]="isLoading()" [(selection)]="selectedActivities" dataKey="id">
             <ng-template #caption>
                 <div class="flex items-center justify-between">
                     <span class="text-xl font-bold">Actividades</span>
