arreglo actividades y pijerias

--- a/frontend/src/app/components/child/child-form/child-form.component.html
+++ b/frontend/src/app/components/child/child-form/child-form.component.html
@@ -69,6 +69,7 @@
           dateFormat="dd-mm-yy"
           [showIcon]="true"
           [iconDisplay]="'input'"
+          styleClass="w-full"
         ></p-date-picker>
         @if (f['fecha_nacimiento'].invalid && f['fecha_nacimiento'].dirty) {
         <small class="p-error">
