--- a/frontend/src/app/features/dashboard/pages/routines/routine-form-page/routine-form-page.component.html
+++ b/frontend/src/app/features/dashboard/pages/routines/routine-form-page/routine-form-page.component.html
@@ -18,6 +18,9 @@
         name="nombreRutina"
         required
       />
+      @if (faltaNombre) {
+        <div class="text-red-500 text-sm mb-4">El nombre de la rutina es obligatorio.</div>
+      }
 
       <!-- Descripción -->
       <label class="block font-semibold text-[#3A3A3A] mb-1">Descripción</label>
@@ -27,6 +30,9 @@
         [(ngModel)]="rutina.descripcion"
         name="descripcionRutina"
       ></textarea>
+      @if( faltaDescripcion ) {
+        <div class="text-red-500 text-sm mb-4">La descripción no puede estar vacía.</div>
+      }
 
       <!-- Días de la semana -->
       <label class="block font-semibold text-[#3A3A3A] mb-2">Días de la Semana</label>
